--- a/apps/blog/templates/index.html
+++ b/apps/blog/templates/index.html
@@ -13,7 +13,7 @@
             <div class="all-blog-posts">
               <div class="row">
 
-                {% for publication in publications %}
+                {% for publication in context_recent_publications %}
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
@@ -55,7 +55,7 @@
                 {% endfor %}
                 <div class="col-lg-12">
                   <div class="main-button">
-                    <a href="blog.html">View All Posts</a>
+                    <a href="{% url 'blog:publications' %}">View All Posts</a>
                   </div>
                 </div>
               </div>
